# Chaemera

./: .gitignore  .oxlintrc.json  AGENTS.md  CONTRIBUTING.md  LICENSE  README.md  SECURITY.md  forge.config.ts  index.html  package-lock.json  package.json  playwright.config.ts  tauri.conf.json  vite.chat-worker.config.mts  vite.worker.config.mts
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/catalog_assets/: language_models.json
src-tauri/leptos-ui/: README.md  components.manifest.json
src-tauri/leptos-ui/primitives/: README.md
src-tauri/prompt_assets/: ask_mode_system_prompt.txt  build_system_prompt.txt  default_ai_rules.txt  default_theme_prompt.txt  plan_mode_system_prompt.txt  supabase_available_system_prompt.txt  supabase_not_available_system_prompt.txt  turbo_edits_v2_system_prompt.txt
src-tauri/src/: chat_worker_host.rs  core_domains.rs  leptos_shell.rs  lib.rs  main.rs  runtime_lifecycle.rs  sqlite_support.rs  wave_aa_domains.rs  wave_ab_domains.rs  wave_ac_domains.rs  wave_ad_domains.rs  wave_ae_domains.rs  wave_af_domains.rs  wave_ag_domains.rs  wave_ah_domains.rs  wave_ai_domains.rs  wave_aj_domains.rs  wave_ak_domains.rs  wave_al_domains.rs  wave_am_domains.rs  wave_an_domains.rs  wave_b_domains.rs  wave_c_domains.rs  wave_d_domains.rs  wave_e_domains.rs  wave_f_domains.rs  wave_g_domains.rs  wave_h_domains.rs  wave_i_domains.rs  wave_j_domains.rs  wave_k_domains.rs  wave_l_domains.rs  wave_m_domains.rs  wave_n_domains.rs  wave_o_domains.rs  wave_p_domains.rs  wave_q_domains.rs  wave_r_domains.rs  wave_s_domains.rs  wave_t_domains.rs  (+6 more)
(+655 files in other folders)
