[package]
name = "chaemera-tauri"
version = "0.37.0-beta.2"
description = "Chaemera Tauri core domain shell"
authors = ["Chaemera"]
edition = "2021"

[lib]
name = "chaemera_tauri"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2" }

[dependencies]
base64 = "0.22"
leptos = { version = "0.8", features = ["ssr"] }
reqwest = { version = "0.12", default-features = false, features = ["blocking", "json", "rustls-tls"] }
rfd = "0.15"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tauri = { version = "2" }
uuid = { version = "1", features = ["v4"] }
walkdir = "2"
